show message when watchlist view is empty (bug 42745)
in future we may want to show calls to action but in the meantime
lets just give the user feedback so it doesn't look broken

--- a/stylesheets/less/specials/watchlist.less
+++ b/stylesheets/less/specials/watchlist.less
@@ -7,6 +7,11 @@
 	-o-user-select: none;
 	user-select: none;
 
+	p.empty {
+		text-align: center;
+		background: none;
+	}
+
 	.mw-mf-watchlist-selector {
 		text-align: center;
 		padding: 8px 0px;
@@ -32,7 +37,7 @@
 	}
 }
 
-ul.mw-mf-watchlist-results {
+#mw-mf-overlay ul.mw-mf-watchlist-results {
 	background-color: white;
 	list-style: none;
 
